feat: production configuration for Railway + Vercel